<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".fragment.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--title-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:alpha="0.85"
                android:text="@string/device_setting"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/close"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="20dp"
                android:src="@mipmap/close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--分割线-->
        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.15"
            android:background="#000000"
            app:layout_constraintTop_toBottomOf="@id/title" />
        <!--左侧recycleview-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recycle_layout"
            android:layout_width="320dp"
            android:layout_height="0dp"
            android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadeScrollbars="true"
                android:scrollbars="vertical" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/line1"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:alpha="0.15"
            android:background="#000000"
            app:layout_constraintStart_toEndOf="@+id/recycle_layout"
            app:layout_constraintTop_toTopOf="@id/line" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_device"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_rounded_coners"
            android:text="@string/add_device"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/line1"
            app:layout_constraintTop_toBottomOf="@+id/line">

            <!--右侧-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/edit_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <!--标题-->
                <TextView
                    android:id="@+id/edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.85"
                    android:text="@string/edit_device"
                    android:textSize="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--设备名称-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/device_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/layout_rounded_border"
                    app:layout_constraintTop_toBottomOf="@id/edit_text">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:text="@string/name"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edit_name"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:background="@null"
                        android:hint="@string/save_device_name"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:textAlignment="viewEnd"
                        android:textSize="16dp"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--设备ip-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/device_ip"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/layout_rounded_border"
                    app:layout_constraintTop_toBottomOf="@id/device_name">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:text="@string/ip"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edit_ip"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:background="@null"
                        android:hint="@string/ip_text"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:textAlignment="viewEnd"
                        android:textSize="16dp"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--x-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/device_x"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/layout_rounded_border"
                    app:layout_constraintTop_toBottomOf="@id/device_ip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:text="@string/x_text"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edit_x"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:background="@null"
                        android:hint="@string/x_hint"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:textAlignment="viewEnd"
                        android:textSize="16dp"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--y-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/device_y"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/layout_rounded_border"
                    app:layout_constraintTop_toBottomOf="@id/device_x">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:text="@string/y_text"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edit_y"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:background="@null"
                        android:hint="@string/y_hint"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:textAlignment="viewEnd"
                        android:textSize="16dp"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--z-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/device_z"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/layout_rounded_border"
                    app:layout_constraintTop_toBottomOf="@id/device_y">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:text="@string/zoom_text"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edit_z"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:background="@null"
                        android:hint="@string/z_hint"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:textAlignment="viewEnd"
                        android:textSize="16dp"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--保存按钮-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/delete_button"
                        android:layout_width="110dp"
                        android:layout_height="48dp"
                        android:background="@drawable/button_rounded_coners"
                        android:text="@string/delete_device"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/save_button"
                        android:layout_width="110dp"
                        android:layout_height="48dp"
                        android:background="@drawable/button_rounded_coners_red"
                        android:text="@string/save_device"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>